--- a/frontend/css/global.css
+++ b/frontend/css/global.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
+
 body {
     font-family: 'Segoe UI', sans-serif;
     background-color: #FAFAFA;
