--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -16,13 +16,22 @@ body {
 
 /* BANNER */
 .banner-placeholder {
-    background-color: rgb(239, 234, 234);
-    height: 500px;
     border-radius: 8px;
     margin: 2rem auto 2.5rem;
-    width: 85vw;
+    width: min(85vw, 100%);
     max-width: 1580px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
+
+.banner-placeholder img {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+  
 
 /* PRODUTOS */
 .produtos {
